src/snapshots/changesette__changelog__tests__appends_at_the_end_without_an_h2.snap
---
source: src/changelog.rs
expression: "upsert(\"no-h2\", \"1.0.0\")"
---
# ublacklist

All notable changes to this project are documented in this file.

## 1.0.0

### Minor Changes

- Add SERPINFO satellites support
