src/snapshots/changesette__changelog__tests__extracts_a_later_section.snap
---
source: src/changelog.rs
expression: "extract(\"basic\", \"1.0.0\").unwrap()"
---
### Minor Changes

- Add something
