src/snapshots/changesette__changelog__tests__extracts_an_explicit_version.snap
---
source: src/changelog.rs
expression: "extract(\"basic\", Some(\"1.0.0\")).unwrap()"
---
### Minor Changes

- Add something
