src/snapshots/changesette__changelog__tests__extracts_the_first_section.snap
---
source: src/changelog.rs
expression: "extract(\"basic\", \"2.0.0\").unwrap()"
---
### Major Changes

- Break something
