src/snapshots/changesette__changelog__tests__extracts_the_latest_section.snap
---
source: src/changelog.rs
expression: "extract(\"basic\", None).unwrap()"
---
### Major Changes

- Break something
