src/snapshots/changesette__changelog__tests__generates_a_new_file_from_empty_text.snap
---
source: src/changelog.rs
expression: "upsert(\"empty\", \"1.0.0\")"
---
# ublacklist

## 1.0.0

### Minor Changes

- Add SERPINFO satellites support
