src/snapshots/changesette__changelog__tests__ignores_an_h2_inside_a_list_item.snap
---
source: src/changelog.rs
expression: "upsert(\"h2-inside-list-item\", \"1.0.0\")"
---
# ublacklist

## 1.0.0

### Minor Changes

- Add SERPINFO satellites support

## 0.9.0

### Patch Changes

- Fix something
