src/snapshots/changesette__changelog__tests__indents_multi_line_bodies.snap
---
source: src/changelog.rs
expression: "render(&[(Bump::Minor,\n\"First line of body\\nsecond line of body\\n\\nline after a blank line\",)])"
---
## 10.1.0

### Minor Changes

- First line of body
  second line of body

  line after a blank line
