src/snapshots/changesette__changelog__tests__inserts_before_the_first_h2_keeping_the_preamble.snap
---
source: src/changelog.rs
expression: "upsert(\"preamble\", \"1.0.0\")"
---
# ublacklist

All notable changes to this project are documented in this file.

## 1.0.0

### Minor Changes

- [#42](https://github.com/iorate/ublacklist/pull/42) - Add SERPINFO satellites support

## 0.9.0

### Minor Changes

- Add something

## 0.8.0

### Patch Changes

- Fix something
