src/snapshots/changesette__changelog__tests__keeps_a_code_block_inside_a_section.snap
---
source: src/changelog.rs
expression: "extract(\"code-block\", None).unwrap()"
---
### Minor Changes

- Document the changelog format

```md
## 9.9.9
```
